add new content

--- a/index.html
+++ b/index.html
@@ -101,26 +101,34 @@
                 <div class="section-4-body-videos">
                     <div style="width: 140%;">
                         <img class="section-4-video" src="images/nt_thumb_1.png" alt="">
-                        <span class="play-button"></span> 
+                        <span class="play-button"></span>
                     </div>
                     <div style="width: 155%;">
                         <img class="section-4-video" src="images/nt_thumb_2.png" alt="">
-                       <span class="play-button"></span>                    </div>
-                    <div >
+                        <span class="play-button"></span>
+                    </div>
+                    <div>
                         <img class="section-4-video" src="images/nt_thumb_3.png" alt="">
-                        <span class="play-button"></span> 
-                                        </div>
+                        <span class="play-button"></span>
+                    </div>
                     <div style="width: 155%;">
                         <img class="section-4-video" src="images/nt_thumb_4.png" alt="">
-                        <span class="play-button"></span> 
+                        <span class="play-button"></span>
                     </div>
                     <div style="width: 140%;">
-                        <img class="section-4-video"src="images/nt_thumb_5.png" alt="">
-                        <span class="play-button"></span> 
+                        <img class="section-4-video" src="images/nt_thumb_5.png" alt="">
+                        <span class="play-button"></span>
                     </div>
                 </div>
-                <div class="section-allvideos-button">
-                    <h1 class="button"><a href="#">Watch all videos</a></h1>
+                <div class="section-video-text">
+                    <button href="#" class="button">Watch all videos</button>
+                    <p>
+                        Payments on PhonePe are safe, reliable and fast. One in three Indians are now using the PhonePe
+                        app to send money, recharge, pay bills and do so much more, in just a few simple clicks. PhonePe
+                        has also introduced several Insurance products and Investment options that offer every Indian an
+                        equal opportunity to unlock the flow of money, and get access to financial services.
+                       <br> <span style="color:#6739b7;">#KarteJaBadhteJa</span>
+                    </p>
                 </div>
             </div>
         </section>
