--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <div class="section-2">
             <div class="section-2-body">
                 <div class="box">
+    
                     <div>
                         <h1><a href="#">Insurance</a></h1>
                         <h1><i class="bi bi-arrow-right"></i></h1>
@@ -132,6 +133,89 @@
                 </div>
             </div>
         </section>
+        <section class="section-5">
+            <div class="section-4-footer">
+                <div class="section-4-footer-left">
+                  <img src="images/100secure.png" alt="" width="50%" >
+                </div>
+                <div class="section-4-footer-middle">
+                   <h1>Your money stays safe.</h1>
+                   <h4>PhonePe protects your money with the best-in-class security systems that help minimize frauds.</h4>
+                   <div>
+                    <img src="images/pci dss.png" alt="" width="15%" style="margin-right:20px;">
+                    <img src="images/iso.png" alt="" width="15%">
+                   </div>
+                </div>
+                <div class="section-4-footer-right">
+
+                </div>
+            </div>
+                <div class="section-5-header">
+                    <h1>At 4+ Crore</h1>
+                    <h1>Stores,apps,websites & more</h1>
+                    <button><a href="#">Partner with us <img src="images/" alt=""></a></button>
+                </div>
+        </section>
+        <section class="section-6">
+          <div class="section-6-left">
+             <img src="images/sales-anim.png" alt="" width="50%">
+          </div>
+          <div class="section-6-right">
+             <h1>For Business</h1>
+             <p>Find the digital payment solution that fits your business needs</p>
+             <div class="section-6-right-main">
+                <p>I want to:</p>
+                <div class="section-6-right-box">
+                    <a href="#">
+                    <div class="box-left">
+                        <h4>Be on PhonePe Switch</h4>
+                        <p>Get new users for your app</p>
+                    </div>
+                    <div class="box-right">
+                        <h4>></h4>
+                    </div>
+                </a>
+                </div>
+                <div class="section-6-right-box">
+                    <a href="#">
+                    <div class="box-left">
+                        <h4>Accept payments at stores</h4>
+                        <p>Help your business go cashless</p>
+                    </div>
+                    <div class="box-right">
+                        <h4>></h4>
+                    </div>
+                </a>
+                </div>
+                <div class="section-6-right-box">
+                    <a href="#">
+                    <div class="box-left">
+                        <h4>Integrate PhonePe Payment Gateway</h4>
+                        <p>Process online payments seamlessly</p>
+                    </div>
+                    <div class="box-right">
+                        <h4>></h4>
+                    </div>
+                </a>
+                </div>
+                <div class="section-6-right-box">
+                    <a href="#">
+                    <div class="box-left">
+                        <h4>Advertise on PhonePe</h4>
+                        <p>Advertise & let customers know about you</p>
+                    </div>
+                    <div class="box-right">
+                        <h4>></h4>
+                    </div>
+                </a>
+                </div>
+             </div>
+          </div>
+        </section>
+        <section class="section-7">
+       
+        </section>
+        <br>
     </main>
 </body>
 
